made some minor changes to the ui

--- a/onlinetest/src/sass/Register.sass
+++ b/onlinetest/src/sass/Register.sass
@@ -50,6 +50,9 @@
       div
         margin: 2% 0
 
+    form div:first-child
+      margin-bottom: 0
+
   #sideText
     @extend %d-flex-c
     width: 20%
