--- a/onlinetest/src/sass/Register.sass
+++ b/onlinetest/src/sass/Register.sass
@@ -22,8 +22,8 @@
 
   #regForm::after
     content: ''
-    bottom: 10vh
-    right: 30vh
+    bottom: 10vw
+    right: 30vw
     position: absolute
     z-index: 0
     clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%)
@@ -52,6 +52,9 @@
 
     form div:first-child
       margin-bottom: 0
+
+    #submit
+      z-index: 2
 
   #sideText
     @extend %d-flex-c
