--- a/onlinetest/src/App.sass
+++ b/onlinetest/src/App.sass
@@ -9,7 +9,7 @@
   display: flex
   justify-content: center
   width: 100%
-  height: 100vh
+  // height: 100vh
   margin: 0
   padding: 0
   background: rgb(0,219,255)
@@ -19,7 +19,7 @@
 .Parent
   @extend %d-flex-c
   width: 100%
-  height: 100vh
+  height: auto
   justify-content: flex-start
   overflow-y: scroll
 
@@ -32,7 +32,7 @@
 
   h1
     margin: 0
-    font-size: 4rem
+    font-size: 5vw
     text-shadow: 2px 2px 4px #ffffff13
     // color: black
     -webkit-text-fill-color: #00000000 /* Will override color (regardless of order) */
@@ -48,12 +48,12 @@
   font-size: 50px !important
 
 
-@media only screen and ( max-width: 769px )
-  .header h1
-    font-size: 3rem !important
-@media only screen and ( max-width: 634px )
-  .header h1
-    font-size: 2rem !important
-  #sideText span
-    font-size: 0.8rem
+// @media only screen and ( max-width: 769px )
+//   .header h1
+//     font-size: large !important
+// @media only screen and ( max-width: 634px )
+//   .header h1
+//     font-size: x-large !important
+//   #sideText span
+//     font-size: 0.8rem
   
