--- a/onlinetest/src/sass/Register.sass
+++ b/onlinetest/src/sass/Register.sass
@@ -5,11 +5,12 @@
   @extend %d-flex-r
   width: 100%
   position: relative
+  height: 80vh
 
   #regForm::before
     content: ''
-    top: 5vh
-    left: 10vh
+    top: 5vw
+    left: 10vw
     position: absolute
     z-index: 0
     clip-path: polygon(50% 0%, 0% 100%, 100% 100%)
@@ -37,16 +38,20 @@
   #regForm
     @extend %d-flex-c
     width: 80%
-    height: 80vh
-    background: white
+    height: 100%
+    background: rgb(255,255,255)
     border-top-right-radius: 50px
     box-shadow: -5px -4px 8px 0 rgba(255, 255, 255, 0.2), 5px 4px 20px 0 rgba(255, 255, 255, 0.19)
+    // overflow-y: scroll
+    justify-content: flex-start
 
     form
       @extend %d-flex-c
       width: 85%
       height: 100%
-      flex-flow: column wrap
+      justify-content: space-evenly
+      overflow-y: auto
+
       div
         margin: 2% 0
 
@@ -59,7 +64,7 @@
   #sideText
     @extend %d-flex-c
     width: 20%
-    height: 80vh
+    height: 100%
 
     span
       color: white
@@ -72,24 +77,32 @@
   .sbody     
       #regForm
         width: 90%
-        height: calc(100% + 10px)
+        height: 100%
         form
           div
             margin: 5% 0
+      #sideText 
+        span
+          font-size: 1rem
 
 
 @media only screen and ( max-width: 590px )
   .sbody 
     #sideText 
       width: 10%
-      span
-        font-size: 1rem
-    
+          
     #regForm
       width: 90%
-      height: calc(100% + 10px)
-
-
+      height: 100%
       form
         div
           margin: 6% 0
+
+@media only screen and ( max-height: 768px )
+  .sbody 
+    #regForm
+      form
+        justify-content: flex-start !important
+  #sideText 
+    span
+      font-size: 4vh !important
