created new ui as old one was no so good looking

--- a/onlinetest/src/sass/base.sass
+++ b/onlinetest/src/sass/base.sass
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lemonada&display=swap')
-
+@import url('https://fonts.googleapis.com/css?family=Fredoka+One&display=swap')
 $font-cursive: 'Lemonada', cursive
+$font-thick: 'Fredoka One', cursive
 $primary-color: #333
 
 %d-flex-r
