--- a/onlinetest/src/App.sass
+++ b/onlinetest/src/App.sass
@@ -9,51 +9,39 @@
   display: flex
   justify-content: center
   width: 100%
-  // height: 100vh
+  height: 100vh
   margin: 0
   padding: 0
-  background: rgb(0,219,255)
-  background: linear-gradient(326deg, rgba(0,219,255,1) 0%, rgba(106,94,223,1) 40%, rgba(0,0,0,1) 100%)
+  // background: rgb(0,219,255)
+  // background: linear-gradient(326deg, rgba(0,219,255,1) 0%, rgba(106,94,223,1) 40%, rgba(0,0,0,1) 100%)
+  background: rgb(0,255,170)
+  // background: radial-gradient(circle, rgba(0,255,170,1) 50%, rgba(47,212,182,1) 100%)
+  background: linear-gradient(to right, rgb(255, 153, 102), rgb(255, 94, 98))
 
 
 .Parent
   @extend %d-flex-c
   width: 100%
-  height: auto
+  // height: 100vh
   justify-content: flex-start
+  align-items: flex-start
   overflow-y: scroll
+  padding: 0 50px
 
-.header
-  @extend %d-flex-r
-  justify-content: flex-start
-  width: 90%
-  height: 20vh
-  color: white
-
-  h1
-    margin: 0
-    font-size: 5vw
-    text-shadow: 2px 2px 4px #ffffff13
-    // color: black
-    -webkit-text-fill-color: #00000000 /* Will override color (regardless of order) */
-    -webkit-text-stroke-width: 1px
-    -webkit-text-stroke-color: white
-
-.MuiIcon-root 
-  width: fit-content !important
-  height: fit-content !important
-  padding: 0 10px
-
-.MuiSvgIcon-root
-  font-size: 50px !important
+  .header
+    @extend %d-flex-r
+    width: 100%
+    height: 15vh
+    justify-content: flex-start
+    // background: white
+    h1
+      margin: 0
+      display: inline-block
+      color: white
+      font-family: $font-thick
+      letter-spacing: 4px
+      font-weight: 100
+      text-shadow: 0px 0px 20px #000000
 
 
-// @media only screen and ( max-width: 769px )
-//   .header h1
-//     font-size: large !important
-// @media only screen and ( max-width: 634px )
-//   .header h1
-//     font-size: x-large !important
-//   #sideText span
-//     font-size: 0.8rem
   
