--- a/onlinetest/src/App.sass
+++ b/onlinetest/src/App.sass
@@ -27,6 +27,16 @@
   align-items: flex-start
   overflow-y: scroll
   padding: 0 50px
+  animation: fadeInAnimation ease 3s 
+  animation-iteration-count: 1 
+  animation-fill-mode: forwards
+
+  @keyframes fadeInAnimation 
+    0% 
+      opacity: 0
+    100% 
+      opacity: 1
+
 
   .header
     @extend %d-flex-r
@@ -44,4 +54,9 @@
       text-shadow: 0px 0px 20px #000000
 
 
+@media screen and ( max-width: 440px )
+  .Parent
+    padding: 2px
+  .header h1
+    font-size: 3vh
   
