made some color scheme changes and created test page skeleton

--- a/onlinetest/src/App.sass
+++ b/onlinetest/src/App.sass
@@ -12,11 +12,13 @@
   height: 100vh
   margin: 0
   padding: 0
-  // background: rgb(0,219,255)
-  // background: linear-gradient(326deg, rgba(0,219,255,1) 0%, rgba(106,94,223,1) 40%, rgba(0,0,0,1) 100%)
-  background: rgb(0,255,170)
-  // background: radial-gradient(circle, rgba(0,255,170,1) 50%, rgba(47,212,182,1) 100%)
-  background: linear-gradient(to right, rgb(255, 153, 102), rgb(255, 94, 98))
+  // background: rgb(0,255,170)
+  // background: linear-gradient(to right, rgb(255, 153, 102), rgb(255, 94, 98))
+  background: #007991  
+  background: -webkit-linear-gradient(to right, #78ffd6, #007991)  
+  background: linear-gradient(to right, #78ffd6, #007991) 
+
+
 
 
 .Parent
