--- a/onlinetest/src/sass/SignUp.sass
+++ b/onlinetest/src/sass/SignUp.sass
@@ -63,14 +63,16 @@
       #reg
         align-self: flex-start
         font-family: $font-thick
-        color: #ff6162
+        color: rgb(1, 122, 145)
         letter-spacing: 3px
         font-weight: 100
         font-size: 25px
         margin: 0
 
       #submit
-        background: linear-gradient(to right, rgb(255, 153, 102), rgb(255, 94, 98))
+        background: #007991  
+        background: -webkit-linear-gradient(to right, #78ffd6, #007991)  
+        background: linear-gradient(to right, #78ffd6, #007991)   
 
 
 
