--- a/onlinetest/src/sass/ConductTest.sass
+++ b/onlinetest/src/sass/ConductTest.sass
@@ -2,6 +2,75 @@
 
 .testContainer
   @extend %d-flex-r
+  justify-content: center
   width: 100%
-  height: 100%
-  background: white
+  height: 98%
+  margin-bottom: 2%
+  // background: white
+
+  .navques
+    @extend %d-flex-c
+    margin: 0 25px
+    justify-content: flex-start
+    box-sizing: border-box
+    padding: 25px
+    border-radius: 20px
+    width: 300px
+    height: 100%
+    // background: rgba(0, 0, 0, 0.25)
+    background: #000000  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000)  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(67, 67, 67, 0.2)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  .areaques
+    @extend %d-flex-c
+    margin: 0 25px
+    width: calc(100% - 350px)
+    max-width: 1200px
+    height: 100%
+    border-radius: 20px
+    justify-content: space-between
+    background: #000000  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000)  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, rgba(67, 67, 67, 0.2), rgba(0, 0, 0, 0.25)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+    .submit,.ques,.actions
+      @extend %d-flex-r
+      width: 100%
+      box-sizing: border-box
+      padding: 15px 10px
+      border-radius: 20px
+
+    .submit
+      justify-content: flex-end
+      margin-right: 25px
+      height: 80px
+      #stest
+        color: white
+        border: 2px solid white
+        border-radius: 25px
+        background: #007991  
+        background: -webkit-linear-gradient(to right, #78ffd6, #007991)  
+        background: linear-gradient(to right, #78ffd6, #007991) 
+
+    .ques
+      height: calc(100% - 160px)
+      width: 98%
+      background: #007991  
+      background: -webkit-linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))  
+      background: linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))
+ 
+
+    .actions
+      height: 80px
+      box-sizing: border-box
+      padding: 0 25px
+      justify-content: space-between
+      #prevnext
+        color: white
+        border: 2px solid white
+        border-radius: 25px
+        background: #007991  
+        background: -webkit-linear-gradient(to right, #78ffd6, #007991)  
+        background: linear-gradient(to right, #78ffd6, #007991)     
