--- a/onlinetest/src/sass/Disclaimer.sass
+++ b/onlinetest/src/sass/Disclaimer.sass
@@ -13,7 +13,7 @@
   padding: 50px
 
   h4
-    color: #ff5f62
+    color: #007991  
     font-weight: 600
 
   .lorem
@@ -33,8 +33,10 @@
     justify-content: flex-end
 
     .MuiButton-contained
-      color: red
-      background-color: #ffffff75
+      color: white
+      background: #007991  
+      background: -webkit-linear-gradient(to right, #78ffd6, #007991)  
+      background: linear-gradient(to right, #78ffd6, #007991)  
 
 
     
