--- a/onlinetest/src/sass/ConductTest.sass
+++ b/onlinetest/src/sass/ConductTest.sass
@@ -15,17 +15,52 @@
     box-sizing: border-box
     padding: 25px
     border-radius: 20px
+    min-width: 340px
     width: 340px
     height: 100%
     background: #000000  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #434343, #000000)  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, rgba(0, 0, 0, 0.25), rgba(67, 67, 67, 0.2)) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+    .navigator
+      @extend  %d-flex-r
+      box-sizing: border-box
+      width: 100%
+      height: 100%
+      justify-content: flex-start
+      flex-wrap: wrap
+      margin-top: 15px
+      border: 1px solid rgb(120, 255, 214)
+      border-radius: 15px
+      align-items: flex-start
+      align-content: flex-start
+      padding: 20px
+
+      .naviC
+        display: grid
+        justify-content: center
+        width: 62px
+        margin-bottom: 10px
+        .navi
+          font-family: $font-thick
+          display: block
+          width: 40px
+          height: 40px
+          line-height: 40px
+          text-align: center
+          vertical-align: middle
+          border: 2px solid white
+          border-radius: 50%
+          color: white
+          background: #007991  
+          background: -webkit-linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))  
+          background: linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))
 
   .areaques
     @extend %d-flex-c
     min-height: 600px
     width: calc(100% - 350px)
-    max-width: 1200px
+    min-width: 600px
     height: 100%
     border-radius: 20px
     justify-content: space-between
