--- a/onlinetest/src/App.sass
+++ b/onlinetest/src/App.sass
@@ -45,9 +45,9 @@
     width: 100%
     min-height: 100px
     height: 15vh
-    justify-content: flex-start
+    justify-content: space-between
     // background: white
-    h1
+    h1,h3
       margin: 0
       display: inline-block
       color: white
@@ -55,6 +55,10 @@
       letter-spacing: 4px
       font-weight: 100
       text-shadow: 0px 0px 20px #000000
+
+    .user
+      @extend %d-flex-r
+      width: fit-content
 
 
 @media screen and ( max-width: 440px )
