--- a/onlinetest/src/sass/ConductTest.sass
+++ b/onlinetest/src/sass/ConductTest.sass
@@ -57,7 +57,7 @@
         justify-content: center
         width: 62px
         margin-bottom: 10px
-        .navi,.naviAV,.naviV
+        .navi,.naviA
           font-family: $font-thick
           display: block
           width: 40px
@@ -72,12 +72,12 @@
         .navi
           color: white
           border: 2px solid white
-        .naviAV
-          color: purple
-          border: 2px solid purple
-        .naviV
-          color: yellow
-          border: 2px solid yellow
+        .naviA
+          color: white
+          border: 2px solid white
+          background: #78ff7f  
+          background: -webkit-linear-gradient(to right, #78ff7f, #009149)  
+          background: linear-gradient(to right, #78ff7f, #009149)  
 
   .areaques
     @extend %d-flex-c
@@ -102,9 +102,37 @@
     .submit
       padding: 0
       width: calc(100% - 25px)
-      justify-content: flex-end
+      justify-content: space-between
       margin-right: 25px
       height: 80px
+      .legend
+        @extend %d-flex-r
+        width: 400px
+        margin: 0 25px
+        justify-content: space-evenly
+        font-family: $font-thick
+        color: white
+        .navi,.naviA
+          font-family: $font-thick
+          display: block
+          width: 40px
+          height: 40px
+          line-height: 40px
+          text-align: center
+          vertical-align: middle
+          border-radius: 50%
+          background: #007991  
+          background: -webkit-linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))  
+          background: linear-gradient(to right, rgba(120, 255, 215, 0.5), rgba(0, 121, 145, 0.5))
+        .navi
+          color: white
+          border: 2px solid white
+        .naviA
+          color: white
+          border: 2px solid white
+          background: #78ff7f  
+          background: -webkit-linear-gradient(to right, #78ff7f, #009149)  
+          background: linear-gradient(to right, #78ff7f, #009149)  
       #stest
         color: white
         border: 2px solid white
@@ -133,7 +161,7 @@
         
       .qtext > p
         margin: 0
-        font-size: 30px
+        font-size: 38px
         color: white
         font-family: $font-thick !important
 
@@ -146,6 +174,7 @@
 
         #txt
           color: white 
+          font-size: 25px
 
     .actions
       height: 80px
